apps/overlays/huston/infra/node-exporter/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: node-exporter-cert
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metrics.huston.lab.markaplay.net`)
      kind: Rule
      services:
      - name: node-exorter-prometheus-node-exporter
        port: 9100
  tls:
    secretName: node-exporter-cert
